feat: implement GET /v1/customers/deactivate/{id:[0-9]+} endpoint and added documentation
